[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/mesh_creator/ToolBoxDock.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=2]

[node name="MeshCreator_Tools" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -805.0
script = ExtResource( 1 )

[node name="ToolsList" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label_Create" type="Label" parent="ToolsList"]
margin_right = 219.0
margin_bottom = 31.0
custom_styles/normal = SubResource( 1 )
text = "
CREATE"
align = 1

[node name="GenerateButtons" type="GridContainer" parent="ToolsList"]
editor/display_folded = true
margin_top = 35.0
margin_right = 219.0
margin_bottom = 55.0
columns = 2

[node name="Button_CreateCube" type="Button" parent="ToolsList/GenerateButtons"]
margin_right = 85.0
margin_bottom = 20.0
text = "Quick Cube"

[node name="Button_OpenGenerators" type="Button" parent="ToolsList/GenerateButtons"]
margin_left = 89.0
margin_right = 211.0
margin_bottom = 20.0
text = "Open Generators"

[node name="Generators" type="GridContainer" parent="ToolsList"]
margin_top = 59.0
margin_right = 219.0
margin_bottom = 79.0

[node name="OptionButton" type="OptionButton" parent="ToolsList/Generators"]
margin_right = 80.0
margin_bottom = 20.0
text = "Select"
flat = true
items = [ "Select", null, false, 0, null, "Box", null, false, 1, null, "Select", null, false, 0, null, "Box", null, false, 1, null ]
selected = 0

[node name="HSeparator" type="HSeparator" parent="ToolsList"]
margin_top = 83.0
margin_right = 219.0
margin_bottom = 87.0

[node name="Label_Mode" type="Label" parent="ToolsList"]
margin_top = 91.0
margin_right = 219.0
margin_bottom = 122.0
custom_styles/normal = SubResource( 2 )
text = "
MODE"
align = 1

[node name="ModesButtons" type="GridContainer" parent="ToolsList"]
margin_top = 126.0
margin_right = 219.0
margin_bottom = 148.0
columns = 4

[node name="Button_ModeMesh" type="ToolButton" parent="ToolsList/ModesButtons"]
margin_right = 48.0
margin_bottom = 22.0
toggle_mode = true
text = "MESH"

[node name="Button_ModeVertex" type="ToolButton" parent="ToolsList/ModesButtons"]
margin_left = 52.0
margin_right = 87.0
margin_bottom = 22.0
toggle_mode = true
text = "VTX"

[node name="Button_ModeEdge" type="ToolButton" parent="ToolsList/ModesButtons"]
margin_left = 91.0
margin_right = 137.0
margin_bottom = 22.0
toggle_mode = true
text = "EDGE"

[node name="Button_ModeFace" type="ToolButton" parent="ToolsList/ModesButtons"]
margin_left = 141.0
margin_right = 184.0
margin_bottom = 22.0
toggle_mode = true
text = "FACE"

[node name="Label_Tools" type="Label" parent="ToolsList"]
margin_top = 152.0
margin_right = 219.0
margin_bottom = 183.0
custom_styles/normal = SubResource( 2 )
text = "
TOOLS"
align = 1

[node name="ToolsButtons" type="GridContainer" parent="ToolsList"]
margin_top = 187.0
margin_right = 219.0
margin_bottom = 255.0
columns = 3

[node name="Button_ToolSelect" type="Button" parent="ToolsList/ToolsButtons"]
margin_right = 63.0
margin_bottom = 20.0
text = "Select"

[node name="Button_ToolMove" type="Button" parent="ToolsList/ToolsButtons"]
margin_left = 67.0
margin_right = 114.0
margin_bottom = 20.0
text = "Move"

[node name="Button_ToolScale" type="Button" parent="ToolsList/ToolsButtons"]
margin_left = 118.0
margin_right = 182.0
margin_bottom = 20.0
text = "Scale"

[node name="Button_ToolExtrude" type="Button" parent="ToolsList/ToolsButtons"]
margin_top = 24.0
margin_right = 63.0
margin_bottom = 44.0
text = "Extrude"

[node name="Button_ToolInset" type="Button" parent="ToolsList/ToolsButtons"]
margin_left = 67.0
margin_top = 24.0
margin_right = 114.0
margin_bottom = 44.0
text = "Inset"

[node name="Button_ToolRemove" type="Button" parent="ToolsList/ToolsButtons"]
margin_left = 118.0
margin_top = 24.0
margin_right = 182.0
margin_bottom = 44.0
text = "Remove"

[node name="Button_ToolLoopcut" type="Button" parent="ToolsList/ToolsButtons"]
margin_top = 48.0
margin_right = 63.0
margin_bottom = 68.0
text = "Loopcut"
